# MzKit

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  OPENMS_NOTES.md  README.md  default_config.ini  environment.yml  main.py  pyproject.toml
core/cli/: align_ensembles.py  analyte_table_import.py  base.py  build_injection_analytes.py  export_bpcs.py  export_compound.py  export_ensemble.py  export_table.py  filter_alignment.py  find_cofeatures.py  find_mfs.py  fingerprint_import.py  generate_ensemble.py  import_feature_table.py  main.py  metadata_import.py  mzml_import.py  process_runner.py  segment_chromatogram.py
core/controllers/: ProcessController.py
core/data_structs/: __init__.py  alignment.py  analyte.py  analyte_table.py  data_registry.py  ensemble.py  feature_pointer.py  feature_table.py  fingerprint.py  injection.py  sample.py  scan_array.py  uuid_types.py
core/interfaces/: data_sources.py
core/labeling/: __init__.py  candidate_generator.py  schema.py
core/utils/: __init__.py  array_types.py  arrays.py  config.py  filesystem.py  import_sample_metadata.py  natural_sort.py  openms.py  persistence.py  persistence_old.py  sample_matching.py  spectrum_export.py
docs/: V1_PLAN.md
gui/controllers/: __init__.py  main_controller.py  sample_controller.py  selection_manager.py  subwindow_controller.py
gui/dialogues/: AlignmentFilterWizard.py  AnalyteTableImportWizard.py  FeatureTableImportWizard.py  FingerprintImportWizard.py  LabelingSessionDialog.py  MetadataImportWizard.py  MzMLImportWizard.py  SampleMatchingWizard.py
gui/labeling/: __init__.py  labeling_window.py
gui/mdi/: mdi_area.py
gui/models/: alignment_list_model.py  analyte_table_list_model.py  ensemble_properties_model.py  sample_list_model.py  sample_proxy_model.py
gui/resources/: AlignmentFilterWizard.py  AlignmentFilterWizard.ui  AnalyteTableImportWizardWindow.py  AnalyteTableImportWizardWindow.ui  AnalyteTableViewerWindow.py  AnalyteTableViewerWindow.ui  ChromWidget.py  ChromWidget.ui  EnsembleViewerWindow.py  EnsembleViewerWindow.ui  FeatureGroupConstructionWindow.ui  FeatureTableImportWizard.py  FeatureTableImportWizard.ui  FingerprintImportWizardWindow.py  FingerprintImportWizardWindow.ui  FingerprintViewerWindow.py  FingerprintViewerWindow.ui  FormulaFinderWindow.py  FormulaFinderWindow.ui  InjectionViewerWindow.py  InjectionViewerWindow.ui  LabelingWindow.py  LabelingWindow.ui  MainWindow.py  MainWindow.ui  MainWindow_old.ui  (+11 more)
tests/: conftest.py  test_build_features_parity.py  test_ensemble.py  test_find_cofeatures.py  test_formula_finder.py  test_ms_data_structures.py  test_mzml_import.py  test_persistence.py
(+39 files in other folders)
