[project]
name = "mzkit"
version = "0.1.0"
description = "Toolkit for inspecting LC/MS data"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "find-mfs",
    "numpy<=2.2",
    "pandas-stubs==2.3.2.250926",
    "pyopenms>=3.4.0",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.13.7",
    "scipy<=1.15.1",
    "scipy-stubs==1.16.2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.uv.sources]
find-mfs = { path = "../../PycharmProjects/find-mfs", editable = true }
